# Programaci-n-3-Neural-Network---Application

./: CMakeLists.txt  README.md
examples/: cifrados.txt  labels.txt
include/utec/algebra/: shape.h  tensor_backend.h  tensor_ops.h
include/utec/crypto/: CipherDetector.h  MultiLayerCipherDetector.h
include/utec/io/: TextDatasetLoader.h
include/utec/monitoring/: TrainingMonitor.h
include/utec/nn/: neural_network.h  nn_activation.h  nn_convolution.h  nn_dense.h  nn_flatten.h  nn_graph.h  nn_interfaces.h  nn_loss.h  nn_ops.h  nn_optimizer.h  nn_pooling.h
src/: cryptovision_main.cpp
tests/: check.h  test_activation.cpp  test_conv2d.cpp  test_cryptovision.cpp  test_dense.cpp  test_exceptions.cpp  test_flatten.cpp  test_graph.cpp  test_io.cpp  test_loss.cpp  test_neural_network.cpp  test_optimizer.cpp  test_pooling.cpp  test_shape.cpp  test_tensor.cpp  test_tensor_ops.cpp
